segundo commit, hasta ahora actual

--- a/src/app/components/medicine-history/medicine-history.component.html
+++ b/src/app/components/medicine-history/medicine-history.component.html
@@ -21,7 +21,7 @@
     </div>
   </div>
 
-  <h2 class="history-title">Historial de tomas</h2>
+  <h2 class="history-title">Historial de medicamentos</h2>
 
   <div class="medicine-history-list">
     <div class="medicine-item-card" *ngFor="let item of medicineHistory">
