--- a/src/app/components/profile-patient/profile-patient.html
+++ b/src/app/components/profile-patient/profile-patient.html
@@ -70,7 +70,7 @@
     <p *ngIf="!patient || !patient.enfermedades">No hay enfermedades registradas.</p>
   </div>
 
-  <h3 class="section-heading">Familiares de Apoyo</h3>
+  <h3 class="section-heading">Familiar de Apoyo</h3>
   <div class="support-family-list">
     <div *ngIf="supportFamilies.length === 0" class="no-support-message">
       No hay familiares de apoyo registrados para este paciente.
