--- a/src/app/components/medicines-list/medicines-list.component.html
+++ b/src/app/components/medicines-list/medicines-list.component.html
@@ -21,7 +21,7 @@
         <div class="daily-agenda-card" (click)="navigateToMedicineDetail(group.patientId)">
           <div class="card-header">
             <img src="assets/images/info-icon.svg" alt="Info" class="info-icon">
-            <span class="card-title">Agenda diaria</span>
+            <span class="card-title">Agenda</span>
             <button class="close-button" (click)="openDeleteConfirmation(group.patientId, $event)">
               <img src="assets/images/close-icon.svg" alt="Close">
             </button>
