--- a/src/app/components/patient-list/patient-list.html
+++ b/src/app/components/patient-list/patient-list.html
@@ -17,7 +17,7 @@
       </div>
       <div class="patient-details">
         <h3 class="patient-name">{{ patient.nombre }}</h3>
-        <p class="patient-info">Edad: {{ patient.edad }} | Sexo: {{ patient.sexo }}</p>
+        <p class="patient-info">Edad: {{ patient.edad }} | Género: {{ patient.sexo }}</p>
         <p class="patient-info">Enfermedades: {{ patient.enfermedades }}</p>
       </div>
       <div class="arrow-icon">
