--- a/src/app/components/support-family/support-family.component.html
+++ b/src/app/components/support-family/support-family.component.html
@@ -5,13 +5,13 @@
     </div>
     <div class="title-text">
       <ng-container *ngIf="activeCard === 0">
-        <h2>Apoyo Familiar</h2>
+        <h2>Vincula a tu Cuidador</h2>
       </ng-container>
       <ng-container *ngIf="activeCard === 1">
-        <h2>Vincular Familiar</h2>
+        <h2>Vincula a tu Cuidador</h2>
       </ng-container>
       <ng-container *ngIf="activeCard === 2">
-        <h2>Vinculado</h2>
+        <h2>Cuidador Vinculado</h2>
       </ng-container>
     </div>
     <div class="content-area">
@@ -26,14 +26,14 @@
           </select>
         </div>
         <div class="phone-input-group">
-          <label for="phoneNumber">Número telefónico</label>
+          <label for="phoneNumber">Número telefónico del Cuidador:</label>
           <input type="tel" id="phoneNumber" [(ngModel)]="phoneNumber" placeholder="Ingrese el número">
           <div class="error-message" *ngIf="error">{{ error }}</div>
         </div>
       </ng-container>
       <ng-container *ngIf="activeCard === 2">
         <div class="success-message">
-          <p>¡Familiar vinculado exitosamente!</p>
+          <p>¡Cuidador vinculado exitosamente!</p>
           <p>Ahora podrás recibir notificaciones sobre el estado de tu paciente.</p>
         </div>
       </ng-container>
