Proyecto pienza finalizado (creo)

--- a/src/app/components/add-medicine/add-medicine.component.html
+++ b/src/app/components/add-medicine/add-medicine.component.html
@@ -28,7 +28,7 @@
       <option value="cada 72 horas">Cada 72 horas</option>
     </select>
 
-    <label for="horaFecha" class="form-label">Hora y Fecha de medicación:</label>
+    <label for="horaFecha" class="form-label">Hora y Fecha de inicio de la medicación:</label>
     <input type="datetime-local" id="horaFecha" formControlName="horaFecha" class="form-input" />
 
     <div class="form-group">
